@@ -8,7 +8,7 @@
 require 'rbconfig'
 
 module Gem
-  VERSION = '2.0.2'
+  VERSION = '2.0.3'
 end
 
 # Must be first since it unloads the prelude from 1.9.2
@@ -328,7 +328,7 @@ module Gem
   end
 
   ##
-  # The path to the data directory specified by the gem name.  If the
+  # The path the the data directory specified by the gem name.  If the
   # package is not available as a gem, return nil.
 
   def self.datadir(gem_name)
