@@ -110,4 +110,18 @@ module Gem
       'ruby'
     end
   end
+
+  ##
+  # The default signing key path
+
+  def self.default_key_path
+    File.join Gem.user_home, ".gem", "gem-private_key.pem"
+  end
+
+  ##
+  # The default signing certificate chain path
+
+  def self.default_cert_path
+    File.join Gem.user_home, ".gem", "gem-public_cert.pem"
+  end
 end
