@@ -1073,7 +1073,6 @@ gem 'other', version
 
         CONFIG['CC'] = '$(TOUCH) $@ ||'
         CONFIG['LDSHARED'] = '$(TOUCH) $@ ||'
-        $ruby = '#{Gem.ruby}'
 
         create_makefile("#{@spec.name}")
       RUBY
